# url-shortener

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yaml
client/: .dockerignore  .env.example  Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: style.css
client/src/api/: shortener.ts
client/src/components/: Header.vue
client/src/composables/: useShortener.ts
client/src/types/: index.ts
client/src/views/: MainView.vue
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile
server/.sqlx/: query-1657a9c439801b3809c2884113830d8e1438305f3ec327dbff61ff3057379fcc.json  query-2af25eb3bcaee325da268f1fd90b67fd3bf56cd89fe4add45d9f06b5a54c47ee.json  query-572f5e1a15a5908bdd88a2d7d0f64c765ba396c450b5242fbefd80324e0923b4.json  query-5f4bf6e56dd0fc8285fd5862f1696844620e2a4398f1b6532bdc14e9e4078879.json  query-ada72cb837401871715ae94fd9661ee503506e427d28bf1e356f5f8426c8fb70.json  query-cf8b03f3882f9defaaa94480d7bf0d808b82a694d7c2f543e45dcf85c5876244.json
server/db/migrations/: 0001_create_urls.sql
server/migrations/: 0001_create_urls.sql
server/src/: lib.rs  main.rs
