[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = "0.8"

tokio = { version = "1.52", features = ["full"] }

serde = { version = "1", features = ["derive"] }

serde_json = "1"

nanoid = "0.5"

thiserror = "2"

anyhow = "1"

tracing = "0.1"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }

url = "2.5"

dotenvy = "0.15"

sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate"] }

tower_governor = { version = "0.8", features = ["axum"]}

governor = "0.10"

tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
axum-test = "20"
